# bloggimg

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json
client/: .gitignore  package.json
client/public/: index.html  manifest.json
client/src/: API.ts  App.tsx  Common.ts  NotFound.tsx
client/src/atom/: SigninState.ts
client/src/components/: DeleteImageDialog.tsx  ImageList.tsx  ImageUploadArea.tsx  PageFooter.tsx  PageHeader.tsx  ShowImageDialog.tsx
client/src/dto/: ImageData.ts  UploadImageData.ts
client/src/pages/: Home.css  Home.tsx
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/common/: mod.rs
server/src/gyazo/: auth.rs  image.rs  mod.rs  upload_image.rs
server/src/route/: auth.rs  cookie.rs  image.rs  mod.rs
server/templates/: get_token.html.tera
