[package]
name = "bloggimg-server"
version = "0.1.0"
authors = ["nikaera <gimnikaerast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.12"
actix-files = "0.5.0"
tera = "1"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.2.24"
actix-service = "1.0.6"
